being hidden by other responsibilities.

Fixed a typo that had broken the email all class teachers option for
comments.

The fetch subject reports function can now filter out reportdefs which
do not apply to the student's cohorts. This avoids mutiple reports
where the scope of the report is smaller than the scope of the
assessments it is linked to.


Version ClaSS-0.9.7 release (2009/10/22)
-----------------------------------------

Reworked the Register's setAll js function to allow it to preset
values grabbed from the 'last' entered event.

Fixed applying different numbers of periods between sections.

Small tweak to report_reports_list to filter the subject coments by
stage as well as course (avoids duplicates under rare circumstances).


Version ClaSS-0.9.6 release (2009/10/14)
-----------------------------------------

Improved the year end script to take account of sections when
promoting yeargroups.

The permissions groups for yeargroups are now created automatically if
not already present.

Fixed the xml indexed check function.

As a preliminary to saved views for the InfoBook, added a savedview
var to the student_list pages. Made the default view for year and form
different.

Display the tutor name nicely on form_edit table.

Small fix to generate_assessment_columns only affects past assessments
when limited to one stage.


Version ClaSS-0.9.5 release (2009/10/01)
-----------------------------------------

Removed the deprecated section_id field from course table and replaced
with nextcourse_id; the relationship is between sections and groups of
students while courses can be delivered in any section.

Tidied the new_assessments scripts to maintain state properly.

Assessments from previous curriculum years can now be applied to the
MarkBook accounting for the progression of students to the next stage
or next course correctly.

Fix to yeargroup matrix, creating a new perms group was failing.
